<resources>
    <string name="app_name">exmaster</string>
    <string name="we_will_send_you_an_one_time_otp_on_this_given_mobile_number">We will send you an one time otp on this given mobile number</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="otp_verfication">OTP Verfication</string>
    <string name="log_out">log out</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="synch">Synch</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="login">Login</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_name" />
    <string name="rating_tv" />
    <string name="vinod">vinod</string>
    <string name="download">Download</string>
    <string name="textview">TextView</string>
    <string name="button">Download Pdf</string>
    <string name="question_1">Question 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_1">Option 1</string>
    <string name="next_question">Next Question</string>
    <string name="todo">TODO</string>
    <string name="option_4">Option 4</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="todo1">TODO</string>
    <string name="_10">/10</string>
    <string name="skip_question">Skip Question</string>
</resources>