<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:background="@color/colorPrimaryDark">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/messages" />
        <item
            android:id="@+id/synch"
            android:icon="@drawable/ic_baseline_sync_24"
            android:title="@string/synch" />
        <item
            android:id="@+id/trash"
            android:icon="@drawable/ic_baseline_delete_24"
            android:title="@string/trash" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />


    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_baseline_login_24"
        android:title="@string/login" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share" />
    <item
        android:id="@+id/nav_rate"
        android:icon="@drawable/ic_baseline_rate_review_24"
        android:title="@string/rate_us" />

</menu>