<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/currentQuestionTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1"
                android:textColor="#E6FFFFFF"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/totalQuestionsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:textColor="#80FFFFFF"
                android:textSize="20sp"/>
        </LinearLayout>

        <ImageView
            android:layout_toStartOf="@+id/quizTimer"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/timer"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="3dp"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/quizTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00_00"
            android:textSize="16sp"
            android:textColor="#06CBED"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"/>

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_below="@+id/topBar"
        android:layout_marginTop="10dp"
        android:background="#66FFFFFF"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <LinearLayout
        android:layout_below="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/skipq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/questionTV"/>

        <!---Option 1 Layout-->
        <RelativeLayout
            android:id="@+id/option1Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_back_white50_10"
            >

            <TextView
                android:id="@+id/option1TV"
                android:layout_toStartOf="@+id/option1Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:text="@string/option_1"
                android:textColor="#FFFFFF"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/round_back_white50_100"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:id="@+id/option1Icon"
                android:contentDescription="@string/todo" />
        </RelativeLayout>

        <!---Option 2 Layout-->
        <RelativeLayout
            android:id="@+id/option2Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_back_white50_10"
            >

            <TextView
                android:id="@+id/option2TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="15sp"
                android:layout_marginBottom="15sp"
                android:layout_toStartOf="@+id/option2Icon"
                android:text="@string/option_2"
                android:textColor="#FFFFFF" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/round_back_white50_100"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:id="@+id/option2Icon"
                android:contentDescription="@string/todo1" />
        </RelativeLayout>

        <!---Option 3 Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

        <RelativeLayout
            android:id="@+id/option3Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_back_white50_10"
            >

            <TextView
                android:id="@+id/option3TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="15sp"
                android:layout_marginBottom="15sp"
                android:layout_toStartOf="@+id/option3Icon"
                android:text="@string/option_3"
                android:textColor="#FFFFFF" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/round_back_white50_100"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:id="@+id/option3Icon"
                android:contentDescription="TODO" />
        </RelativeLayout>

        <!---Option 4 Layout-->
        <RelativeLayout
            android:id="@+id/option4Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_back_white50_10"
            >

            <TextView
                android:id="@+id/option4TV"
                android:layout_toStartOf="@+id/option4Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:text="@string/option_4"
                android:textColor="#FFFFFF"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/round_back_white50_100"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:id="@+id/option4Icon"
                android:contentDescription="TODO" />
        </RelativeLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextQuestionBtn"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/round_back_secondary_100"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/next_question"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SKIPQuestion"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/round_back_secondary_100"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/skip_question"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />


</RelativeLayout>